fea-rs/test-data/compile-tests/mini-latin/bad/GPOS_4_non_disjoint_mark_class.fea
languagesystem DFLT dflt;

markClass [grave bar] <anchor 111 -11> @TOP_MARKS;
markClass [grave] <anchor 222 22> @CUTE_TOP_MARKS;

feature test {
    pos base a
        <anchor 11 1> mark @TOP_MARKS;
    pos base b
        <anchor 22 -2> mark @CUTE_TOP_MARKS;
} test;
